# labyra-spectra-worker

./: .dockerignore  .gcloudignore  .gitignore  =3.4.0  Dockerfile.bak  README.md  deploy.sh  deploy.sh.bak4a  pyproject.toml  pyproject.toml.bak4a  round-220-wire-mott-schottky.py
.github/workflows/: ci.yml
docker/quantum-espresso/: Dockerfile  README.md  entrypoint.sh
docs/: algorithm-attributions.md
docs/scientific-methods/: band-structure-dos.md  cv-analysis.md  dsc-analysis.md  eis-analysis.md  figure-export.md  ftir-analysis.md  lsv-analysis.md  raman-analysis.md  tafel-analysis.md  tga-analysis.md
scripts/: audit_duplicate_dois.py  backfill_rechunk.py  check_enrichment.py  gen_retrieval_goldenset.py  measure_refs.py  reindex_progress.py  republish_queued.py  resync_mp_structures.sh  reverify_doi.py  setup-reconcile-scheduler.sh  setup_csie_pubsub.sh  trim_qe_out.py
src/: config.py  config.py.bak  config.py.bak4a-config  firestore_client.py  gcs_client.py  main.py  main.py.bak4a  main.py.bak4a-hotfix1  main.py.bak4a-hotfix1b  main.py.bak4a-purge
src/ai/: analyzer.py  analyzer.py.bak  prompts.py  prompts.py.bak  prompts.py.bak3
src/citation/: __init__.py  cache.py  cod_client.py  formula.py  lookup.py  mp_client.py  peak_matcher.py  types.py  xrd_simulator.py
src/csie/: __init__.py  aggregator.py  ambiguity.py  firestore_io.py  pipeline.py  types.py
src/deviation/: __init__.py  composite_rules.py  crystallinity.py  fraction_estimator.py  hypothesis.py  mass_absorption.py  multi_phase.py  peak_matcher.py  pipeline.py  profile_cache.py  rietveld.py  rules.py
src/dft/: batch_client.py  driver.py  errors.py  generator.py  io.py  kpath.py  npool.py  orchestrator.py  qe_parser.py  routes.py  scene.py  schema.py  structure.py  structure_io.py
src/figures/: presets.py  render.py
src/materials/: __init__.py  mp_sync.py
src/papers/: __init__.py  _gemini_client.py  _taxonomy.py  chunking.py  citation.py  citation_service.py  citation_types.py  classify.py  crossref.py  doi_verify.py  embed.py  enrich.py  errors.py  formula_protect.py  google_books.py  index.py  journal_resolve.py  metadata.py  ocr.py  ocr_datalab.py  openalex.py  orchestrator.py  pretranslate.py  pricing.py  references_agent.py  references_extractor.py  references_parser.py  self_doi_resolver.py  state.py  text_normalize.py  tm_seed.py  types.py
src/parsers/: __init__.py  __init__.py.bak  __init__.py.bak3  _tabular.py  _utils.py  cv.py  dsc.py  eis.py  ftir.py  lsv.py  ocp.py  pec_jv.py  pec_mott_schottky.py  raman.py  tafel.py  tga.py  uvvis.py  uvvis.py.bak  uvvis.py.bak2  uvvis_drs.py  xrd.py  xrd.py.bak4a-anode  xrd.py.bak4a-build  xrd.py.bak4a-fix2  xrd.py.bak4a-hotfix1  xrd.py.bak4a-tier12  xrd.py.bak4a-whgate
src/reference/: parser.py
tests/: test_classify.py  test_cod_client_integration.py  test_cv_analysis.py  test_dsc_analysis.py  test_dsc_parser.py  test_eis_analysis.py  test_eu_decimal.py  test_figures.py  test_formula_parser.py  test_ftir_analysis.py  test_ftir_parser.py  test_google_books.py  test_journal_resolve.py  test_lsv_analysis.py  test_main.py  test_metadata_book.py  test_ocp_parser.py  test_peak_matcher.py  test_raman_analysis.py  test_raman_parser.py  test_rietveld_float_edge.py  test_tabular.py  test_tafel_analysis.py  test_tga_analysis.py  test_tga_parser.py  test_uvvis_drs_parser.py  test_uvvis_parser.py  test_xrd_edge_cases.py  test_xrd_parser.py  test_xrd_simulator.py
tests/csie/: test_aggregator.py  test_ambiguity.py  test_pipeline.py
tests/deviation/: test_composite_rules.py  test_crystallinity.py  test_direct_comparison.py  test_fraction_estimator.py  test_multi_phase.py  test_peak_matcher.py  test_profile_cache.py  test_rietveld_profile.py  test_rietveld_rfactors.py  test_rules.py
tests/dft/: test_batch_client.py  test_driver.py  test_generator.py  test_io.py  test_kpath.py  test_orchestrator.py  test_qe_parser_golden.py  test_routes.py  test_structure.py  test_structure_io_smoke.py
tests/fixtures/: dsc_sample.csv  ftir_pet_sample.csv  ocp_sample.csv  raman_graphene_sample.txt  (+5 more)
(+21 files in other folders)
